[tool.poetry]
name = "reservoirpy"

authors = ["Kshitij Soni <kshitijsoni@iipe.ac.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.20.0"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
