[metadata]
description_file = README.md
name = reservoirpy
version = 1.3.8
author = Kshitij Soni
author_email = kshitijsoni@iipe.ac.in
description = reservoirpy - A collection of Reservoir Engineering Utilities
url = https://github.com/kshitijsoni/reservoirpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = ['reservoirpy']
install_requires =
    requests
    numpy
    scipy
    pandas
    tabulate
    gwr_inversion
    mpmath
    openpyxl
    